midterm_aguandhischipmunks/widget_aguandhischipmunks/kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  type: LoadBalancer  # Use NodePort or ClusterIP for internal exposure
  ports:
  - port: 80
    targetPort: 8000  # Should match the containerPort in deployment.yaml
  selector:
    app: django-app
